# Mosaic

./: .gitignore  CMakeLists.txt  PKGBUILD  README  clean_compile_and_install.sh  clean_compile_and_package_debian.sh  compile.sh  compile_and_install.sh  compile_and_package_debian.sh
helper_scripts/: count_card_views.sh  demo_all_cards.sh  dump_solutions.sh  launch.sh
src/: CMakeLists.txt  Flashcard_Parsing.cc  Flashcard_Parsing.h  Mosaic.cc  Structs.cc  Structs.h  Text.cc  Text.h
